force-app/main/default/objects/Promo_Grid_Class_Targeting__c/Promo_Grid_Class_Targeting__c.object-meta.xml
<CustomObject>
    <description>Class list targeting for a Line territory Promo Grid (classification, list %, target monthly visits).</description>
    <label>Promo Grid Class Targeting</label>
    <nameField>
        <displayFormat>PGCT-{00000}</displayFormat>
        <label>Class Targeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Grid Class Targeting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>