force-app/main/default/objects/Promo_Grid_Class_Targeting__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>HCP classification targeted by this Promo Grid row (A1�C3).</description>
    <label>Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HCP_Classification</valueSetName>
    </valueSet>
</CustomField>