force-app/main/default/objects/Promo_Grid_Class_Targeting__c/fields/List_Percentage__c.field-meta.xml
<CustomField>
    <fullName>List_Percentage__c</fullName>
    <description>Share of list focus allocated to this classification within the Line.</description>
    <inlineHelpText>List percentage for this class.</inlineHelpText>
    <label>List Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>