force-app/main/default/objects/Promo_Grid_Class_Targeting__c/fields/Target_Monthly_Visits__c.field-meta.xml
<CustomField>
    <fullName>Target_Monthly_Visits__c</fullName>
    <description>Target monthly visits corresponding to this class list targeting row.</description>
    <inlineHelpText>Expected monthly visit count for HCPs in this class.</inlineHelpText>
    <label>Target Monthly Visits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>